compiler/tests/fixtures/invalid/semantics/loop_over_non_unpacked_role.viv
// Invalid: loop over non-unpacked role

action solo-loop:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    effects:
        loop @target as _@t:
            _@t.visited = true
        end
